--- a/exo 2/exo2.html
+++ b/exo 2/exo2.html
@@ -10,6 +10,7 @@
 <body>
 <input type="text" id="textInput">
 <input type="submit" value="validation" id="validation">
+<input type="submit" value="Suprimer" id="delete">
 	<ul id="liste-commissions">
 		<li>1kg de farine</li>
 		<li>un pack de lait</li>
